<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/customer_info_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/five"
        android:layout_marginRight="@dimen/five"
        android:layout_marginBottom="@dimen/eight"
        app:cardCornerRadius="@dimen/ten"
        app:cardElevation="@dimen/eight">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero"
                android:layout_marginBottom="@dimen/five"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hp_no_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:elevation="@dimen/ten"
                android:text="@string/hp_no_label"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/seventeen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginBottom="@dimen/twenty_four"
                android:elevation="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/amount"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toTopOf="@+id/customer_imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hp_no_label" />

            <TextView
                android:id="@+id/amount_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve"
                android:elevation="@dimen/ten"
                android:text="@string/amount_label"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintStart_toEndOf="@+id/amount"
                app:layout_constraintTop_toBottomOf="@+id/hp_no_label" />

            <TextView
                android:id="@+id/pending_due"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/eighty"
                android:layout_marginTop="@dimen/eight"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/pending_due"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintStart_toEndOf="@+id/hp_no_label"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pending_due_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/pending_due_label"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintStart_toEndOf="@+id/pending_due"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emi"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/thirty_five"
                android:elevation="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/emi"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintStart_toStartOf="@+id/pending_due"
                app:layout_constraintTop_toTopOf="@+id/pending_due" />

            <TextView
                android:id="@+id/emi_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:elevation="@dimen/ten"
                android:text="@string/emi_label"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintStart_toEndOf="@+id/emi"
                app:layout_constraintTop_toBottomOf="@+id/pending_due_label" />

            <ImageView
                android:id="@+id/customer_imageView"
                android:layout_width="@dimen/hundred"
                android:layout_height="@dimen/hundred"
                android:layout_marginStart="@dimen/twenty_four"
                android:layout_marginTop="@dimen/ten"
                android:layout_marginBottom="@dimen/twenty_four"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <TextView
                android:id="@+id/name"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="@dimen/sixteen"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/name"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toTopOf="@id/mobile_no"
                app:layout_constraintEnd_toStartOf="@id/name_label"
                app:layout_constraintStart_toEndOf="@+id/customer_imageView"
                app:layout_constraintTop_toBottomOf="@+id/amount_label" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/zero"
                android:layout_marginBottom="@dimen/twenty_eight"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/name_label"
                app:layout_constraintBottom_toTopOf="@id/mobile_no_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/name" />

            <TextView
                android:id="@+id/mobile_no"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/mobile_no"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toTopOf="@id/vehicle_no"
                app:layout_constraintEnd_toStartOf="@id/mobile_no_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/customer_imageView"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/mobile_no_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/mobile_no_label"
                app:layout_constraintBottom_toTopOf="@id/vehicle_no_label"
                app:layout_constraintEnd_toStartOf="@+id/phone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/mobile_no"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <ImageView
                android:id="@+id/phone"
                android:layout_width="@dimen/twenty_five"
                android:layout_height="@dimen/zero"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_call"
                app:layout_constraintBottom_toBottomOf="@+id/mobile_no_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mobile_no_label" />

            <TextView
                android:id="@+id/vehicle_no"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ten"
                android:layout_marginTop="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/vehicle_no"
                android:textSize="@dimen/fifteen_sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vehicle_no_label"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/customer_imageView"
                app:layout_constraintTop_toBottomOf="@+id/mobile_no" />

            <TextView
                android:id="@+id/vehicle_no_label"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:paddingStart="@dimen/five"
                android:paddingEnd="@dimen/five"
                android:text="@string/vehicle_no_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vehicle_no"
                app:layout_constraintTop_toBottomOf="@+id/mobile_no_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>