<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view2="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mMessageLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/ten"
        android:layout_marginLeft="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/fifteen_dp"
        card_view2:cardBackgroundColor="@android:color/white"
        card_view2:cardCornerRadius="@dimen/five">


        <LinearLayout
            android:id="@+id/mItemLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:gravity="center|start"
                android:padding="@dimen/fifteen_dp"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/logout_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/ten"
                android:text="@string/are_you_sure_want_to_logout"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen_sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:padding="@dimen/ten">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|end"
                    android:padding="@dimen/ten"
                    android:text="@string/cancel"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center|end"
                    android:padding="@dimen/ten"
                    android:text="@string/okay"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/fifteen_sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
